[Java] Use java toolchain launcher to run benchmarks and fix JVM args for JDK 9+.